apps/may-05-test-4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: may-05-test-4
spec:
  selector:
    app: may-05-test-4
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30007


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: may-05-test-4-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: may-05-test-4.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: may-05-test-4
#             port:
#               number: 80
